updated course content to differentiate between grad and undergrad content

--- a/syllabus/src/BIOL4316_Syllabus_fall2023.tex
+++ b/syllabus/src/BIOL4316_Syllabus_fall2023.tex
@@ -117,20 +117,10 @@ Each week students will be required to read a a section of the book
 and produce a short summary as well as two questions that arose during their 
 reading. 
 
-\subsection{\textit{In-class discussion lead and feedback}}
-Each student will be required to lead one Thursday discussion on recent literature. 
-This will involve presenting the article 
-and leading a discussion related to the article. Students must read some of the cited
-literature integral to the study 
-in order to answer relevant questions brought forth during the discussion.
-
-Discussion leads will be done in groups of 2-3 students, subject to enrollment. Paper
-suggestions will be provided by Dr. Smith, but substitutions can be made if approved
-beforehand.
-
-Students not leading the current week’s 
+\subsection{\textit{Recent literature feedback}}
+Students not co-leading the current week’s 
 discussion will be required to produce a summary and 
-develop two questions based on each week’s article.
+develop two questions based on each week’s chosen recent literature article.
 
 \subsection{\textit{Literature review}}
 The primary semester project will be to produce a literature review on a topic 
@@ -157,10 +147,9 @@ beginning the final project.
 
 \section{Grading}
 Participation and Engagement: 15\% \par
-Mini-quizzes: 10\% \par
-Reading feedback: 5\% \par
-Recent literature lead: 15\% \par
-Recent literature feedback: 5\% \par
+Mini-quizzes: 15\% \par
+Reading feedback: 10\% \par
+Recent literature feedback: 10\% \par
 Review idea proposal: 10\% \par
 Review idea feedback: 5\% \par
 Final review presentation: 10\% \par
