--- a/syllabus/src/BIOL5316_Syllabus_fall2023.tex
+++ b/syllabus/src/BIOL5316_Syllabus_fall2023.tex
@@ -43,8 +43,12 @@ As ecosystem ecology is the largest scale of ecology, the class will also cover 
 concepts of individual, population, and community ecology.
 Spatial extent of processes will extend to the globe. Temporal extent will extend to 
 millenia. The class will consider applied aspects of global change and human decision making.
+
 Students will be evaluated on their 
 ability to discuss and disseminate course topics.
+Additionally, as graduate students, you will be evaluated on your ability to help lead
+the implementation and discussion of multiple
+topics on course content throughout the semester.
 
 The course is part of a TTU-wide \textit{Creating Livable Futures} initiative.
 The purpose of the initiative is to create opportunities for students to hear and
@@ -115,22 +119,20 @@ These will be graded for completion and participation in the ensuing class discu
 \subsection{\textit{Reading feedback}}
 Each week students will be required to read a a section of the book 
 and produce a short summary as well as two questions that arose during their 
-reading. 
+reading.
 
-\subsection{\textit{In-class discussion lead and feedback}}
-Each student will be required to lead one Thursday discussion on recent literature. 
-This will involve presenting the article 
-and leading a discussion related to the article. Students must read some of the cited
-literature integral to the study 
-in order to answer relevant questions brought forth during the discussion.
-
-Discussion leads will be done in groups of up to 2 students, subject to enrollment. Paper
-suggestions will be provided by Dr. Smith, but substitutions can be made if approved
-beforehand.
-
-Students not leading the current week’s 
+\subsection{\textit{Recent literature feedback}}
+Students not co-leading the current week’s 
 discussion will be required to produce a summary and 
-develop two questions based on each week’s article.
+develop two questions based on each week’s chosen recent literature article.
+
+\subsection{\textit{Weekly co-leads}}
+Twice throughout the semester, students will be asked to co-lead on the week's discussion
+topic with Dr. Smith. This will consist of answering class feedback questions from the
+Reading feedback. It will also consist of leading a 50 minute discussion of a recent literature article
+of their choice and answering class questions from the Current literature feedbacks.
+Students will be evaluated on their ability to respond accurately to their peers' questions
+as well as their ability to summarize and generate discussion on a recent literature article.
 
 \subsection{\textit{Literature Review}}
 The primary semester project will be to produce a literature review on a topic 
@@ -157,13 +159,15 @@ beginning the final project.
 
 \section{Grading}
 Participation and Engagement: 15\% \par
-Mini-quizzes: 10\% \par
+Mini-quizzes: 5\% \par
 Reading feedback: 5\% \par
-Recent literature lead: 15\% \par
+Co-lead discussion leads: 10\% \par
+Co-lead response to reading feedback: 10\% \par
+Co-lead response to recent literature feedback: 10\% \par
 Recent literature feedback: 5\% \par
-Review idea proposal: 10\% \par
+Review idea proposal: 5\% \par
 Review idea feedback: 5\% \par
-Final review presentation: 10\% \par
+Final review presentation: 5\% \par
 Final review: 25\% \par
 
 Grades will be made available on Blackboard. 
@@ -183,15 +187,21 @@ This class is being offered jointly alongside an undergraduate version of the sa
 BIOL 4316. The content and mode of instruction will be similar. However,
 there are a number of differences. In general, the expected level of rigor for
 all assignments will be higher. Graduate students will also complete the literature
-review independently and it is expected that this review will not only review the current state
+review independently, rather than in groups of at least 3 as in 4316 (40\% of total grade).
+It is expected that this review will not only review the current state
 of knowledge on the topic, but also produce novel findings, questions, and hypotheses.
 The content of the review should be of suitable quality for partial inclusion
 in the introduction of a manuscript or proposal or be submittable for
 publication on its own. For topic leads, graduate students are expected to know
 both the content and information presented in the chosen paper, but will also be
-expected to know and understand tangential ideas related to their chosen paper. Topics leads
-will be done individually or in groups of no more than 2 students and not in larger
-groups as in BIOL 4316.
+expected to know and understand tangential ideas related to their chosen paper. Finally, graduate
+students in this course will be expected to serve as a topic co-lead for 2 separate weeks
+during the course. This involves three assignments per week totaling 30\% of their total
+grade that is not required for undergraduate students. These assignments are to evaluate
+graudate students at a higher level. Notably they will need to display knowledge of topics
+that are sufficient to teach these to their peers in the course. This will require
+substantial reading and studying on the topics. Together, these differences constitute
+criteria for evaluation that is above and beyond that for undergraduate students in BIOL 4316.
 
 \section{Missing In-class Activities}
 Students will be required to be in class to receive in-class activity points. 
