ascap syllabi changes

--- a/syllabus/src/BIOL5316_Syllabus_fall2023.tex
+++ b/syllabus/src/BIOL5316_Syllabus_fall2023.tex
@@ -55,6 +55,30 @@ The purpose of the initiative is to create opportunities for students to hear an
 disseminate information related to global sustainability. More information on the
 initiative is listed below.
 
+\section{Statement on connection to and differences from BIOL 4316}
+This class is being offered jointly alongside an undergraduate version of the same course,
+BIOL 4316. The content and mode of instruction will be similar. However,
+there are a number of differences. Graduate students will also complete the literature
+review independently, rather than in groups of at least 3 as in 4316 (40\% of total grade; see below).
+It is expected that this review will not only review the current state
+of knowledge on the topic, but also produce novel findings, questions, and hypotheses.
+The content of the review should be of suitable quality for partial inclusion
+in the introduction of a manuscript or proposal or be submittable for
+publication on its own. Additionally, graduate
+students in this course will be expected to serve as a topic co-lead for 2 separate weeks
+during the course. This involves three assignments per week totaling 30\% of their total
+grade that is not required for undergraduate students. These assignments are to evaluate
+graudate students at a higher level. Notably they will need to display knowledge of topics
+that are sufficient to teach these to their peers in the course. This will require
+substantial reading and studying on the topics. Together, these differences constitute
+criteria for evaluation that is above and beyond that for undergraduate students in BIOL 4316.
+In total, 50\% of the written final literature review (25\% * 50\% = 12.5\%), 70\% of the
+oral presentation of the literature review (5\% * 70\% = 3.5\%) will have unique evaluation criteria.
+In addition, 30\% of the graduate student total grade will come from the weekly co-leads,
+an additional assignment not required by the undergraduate section. The additional evaluation
+criteria are in place to more critically evaluate graduate student understanding and mastery
+of the course content.
+
 \subsection{Class Time and Location}
 Tuesdays and Thursdays 12:30-13:50
 
@@ -155,6 +179,17 @@ The literature review will be assessed for completeness, breadth, originality, a
 Students must have their project OKed by the instructor after the proposal and prior to
 beginning the final project.
 
+The grading of this review will differ from that for the undergraduate section. Specifically,
+for full points on the breadth and originality portion (20\% of written grade), the question addressed must be completely novel and
+not something that has been reviewed in the published literature. The review
+should produce novel findings, questions, and hypotheses. For full points on the scientific rigor portion (30\% of written grade),
+the content of the review should be of suitable quality for partial inclusion
+in the introduction of a manuscript or proposal or be submittable for
+publication on its own. For full points on the oral presentation portion (5\% of total oral grade), 
+the presentation should be of suitable quality that it could be presented
+at a national conference in the field of plant science (Botanical Society of America) and/or ecology
+(Ecological Society of America).
+
 \newpage
 
 \section{Grading}
@@ -181,27 +216,6 @@ B: 80 – 90\% \par
 C: 70 – 80\% \par
 D: 60 – 70\% \par
 F: $\leq$ 59.9\% \par
-
-\section{Statement on connection to and differences from BIOL 4316}
-This class is being offered jointly alongside an undergraduate version of the same course,
-BIOL 4316. The content and mode of instruction will be similar. However,
-there are a number of differences. In general, the expected level of rigor for
-all assignments will be higher. Graduate students will also complete the literature
-review independently, rather than in groups of at least 3 as in 4316 (40\% of total grade).
-It is expected that this review will not only review the current state
-of knowledge on the topic, but also produce novel findings, questions, and hypotheses.
-The content of the review should be of suitable quality for partial inclusion
-in the introduction of a manuscript or proposal or be submittable for
-publication on its own. For topic leads, graduate students are expected to know
-both the content and information presented in the chosen paper, but will also be
-expected to know and understand tangential ideas related to their chosen paper. Finally, graduate
-students in this course will be expected to serve as a topic co-lead for 2 separate weeks
-during the course. This involves three assignments per week totaling 30\% of their total
-grade that is not required for undergraduate students. These assignments are to evaluate
-graudate students at a higher level. Notably they will need to display knowledge of topics
-that are sufficient to teach these to their peers in the course. This will require
-substantial reading and studying on the topics. Together, these differences constitute
-criteria for evaluation that is above and beyond that for undergraduate students in BIOL 4316.
 
 \section{Missing In-class Activities}
 Students will be required to be in class to receive in-class activity points. 
