updated syllabus to get ready for fall semester

--- a/syllabus/src/BIOL4316_Syllabus_fall2023.tex
+++ b/syllabus/src/BIOL4316_Syllabus_fall2023.tex
@@ -128,12 +128,12 @@ of the student's choice.
 Broadly, the review should address a question or problem related 
 to terrestrial ecosystem ecology and review the current state of knowledge on the topic.
 The review should be forward thinking, in that it forms the
-basis for understanding plant physiological processes moving forward.
+basis for understanding ecosystem dynamics moving forward.
 The review should be novel in that it should not be similar to previously published
 review papers.
 
-Students will first develop a written proposal for their literature review and present 
-their idea to the class. The class and instructors will provide feedback. Students will then produce and present 
+Students will first develop a written proposal for their literature review. Dr. Smith will provide feedback. 
+Students will then produce and present 
 their review to the class at the end of the semester. 
 
 This project will be done in groups of at least 3 people. Students are encouraged to receive help and guidance 
@@ -150,10 +150,9 @@ Participation and Engagement: 15\% \par
 Mini-quizzes: 15\% \par
 Reading feedback: 10\% \par
 Recent literature feedback: 10\% \par
-Review idea proposal: 10\% \par
-Review idea feedback: 5\% \par
-Final review presentation: 10\% \par
-Final review: 25\% \par
+Literature review idea proposal: 15\% \par
+Final literature review presentation: 10\% \par
+Final literature review: 25\% \par
 
 Grades will be made available on Blackboard. 
 All grades posted at the end of the course will be final, 
@@ -244,64 +243,62 @@ A student who is excused may not be penalized for the absence; however, the inst
 may respond appropriately if the student fails to complete the assignment satisfactorily.
 
 \section{TTU Resources for Discrimination, Harassment, and Sexual Violence}
-Texas Tech University is committed to providing and strengthening an educational, 
-working, and living environment where students, faculty, staff, and visitors are 
-free from gender and/or sex discrimination of any kind. 
-Sexual assault, discrimination, harassment, and other Title IX violations are 
-not tolerated by the University. 
-Report any incidents to the Office for Student Rights & Resolution, 
-(806)-742-SAFE (7233), or file a report online at \url{https://www.depts.ttu.edu/titleix/}. 
-Faculty and staff members at TTU are committed to connecting you to resources on campus. 
-Some of these available resources are: TTU Student Counseling Center, 806-742-3674, 
-\url{https://www.depts.ttu.edu/scc/} (provides confidential support on campus). 
-TTU Student Counseling Center 24-hour Helpline, 806-742-5555, 
-(assists students who are experiencing a mental health or interpersonal violence crisis; 
-if you call the helpline, you will speak with a mental health counselor). 
-Voice of Hope Lubbock Rape Crisis Center, 806-763-7273, \url{voiceofhopelubbock.org} 
-(24-hour hotline that provides support for survivors of sexual violence). 
-The Risk, Intervention, Safety and Education (RISE) Office, 806-742-2110, 
-\url{https://www.depts.ttu.edu/rise/} (provides a range of resources and 
-support options focused on prevention education and student wellness). 
-Texas Tech Police Department, 806-742-3931, \url{http://www.depts.ttu.edu/ttpd/} 
-(to report criminal activity that occurs on or near Texas Tech campus). 
+Texas Tech University is committed to providing and strengthening an
+educational, working, and living environment where students, faculty, staff,
+and visitors are free from gender and/or sex discrimination of any kind.
+Sexual assault, discrimination, harassment, and other \href{https://www.depts.ttu.edu/titleix/}{Title IX}
+violations are not tolerated by the University. Report any incidents to the
+Office for Student Rights & Resolution, (806)-742-SAFE (7233) or file a
+report online at \url{titleix.ttu.edu/students}. Faculty and staff members at TTU
+are committed to connecting you to resources on campus. Some of these
+available resources are: TTU Student Counseling Center, 806- 742-3674,
+\url{https://www.depts.ttu.edu/scc/} (Provides confidential support on
+campus.) TTU 24-hour Crisis Helpline, 806-742-5555, (Assists students
+who are experiencing a mental health or interpersonal violence crisis. If you
+call the helpline, you will speak with a mental health counselor.) Voice of
+Hope Lubbock Rape Crisis Center, 806-763-7273,
+\url{voiceofhopelubbock.org} (24-hour hotline that provides support for
+survivors of sexual violence.) The Risk, Intervention, Safety and Education
+(RISE) Office, 806-742-2110, \url{https://www.depts.ttu.edu/rise/} (Provides a
+range of resources and support options focused on prevention education
+and student wellness.) Texas Tech Police Department, 806-742-3931,
+\url{http://www.depts.ttu.edu/ttpd/} (To report criminal activity that occurs on
+or near Texas Tech campus.)
 
-\section{LGBTQIA}
-Please contact the Office of LGBTQIA, Student Union Building Room 201, 806-742-5433, 
-\url{www.lgbtqia.ttu.edu}. 
-Within the Center for Campus Life, the Office serves the Texas Tech community 
-through facilitation and leadership of programming and advocacy efforts. 
-This work is aimed at strengthening the lesbian, gay, bisexual, transgender, queer, 
-intersex, and asexual (LGBTQIA) community and sustaining an inclusive campus that 
-welcomes people of all sexual orientations, gender identities, and gender expressions. 
+\section{Student Support Statement}
+The Office of Campus Access and Engagement works across Texas Tech
+University to foster, affirm, engage, and strengthen all student
+communities. For more information about services, opportunities for
+participation, and ways in which Texas Tech can support your success in
+college, please contact (806) 742-7025.
 
 \section{Classroom Civility}
-Texas Tech University is a community of faculty, students, and staff that enjoys 
-an expectation of cooperation, professionalism, and civility during the conduct of all 
-forms of university business, including the conduct of student–student and student–faculty 
-interactions in and out of the classroom. 
-Further, the classroom is a setting in which an exchange of ideas and creative thinking 
-should be encouraged and where intellectual growth and development are fostered. 
-Students who disrupt this classroom mission by rude, sarcastic, threatening, abusive or 
-obscene language and/or behavior will be subject to appropriate sanctions according to 
-university policy.  Likewise, faculty members are expected to maintain the 
-highest standards of professionalism in all interactions with all constituents of the 
+Texas Tech University is a community of faculty, students, and staff that
+enjoys an expectation of cooperation, professionalism, and civility during
+the conduct of all forms of university business, including the conduct of
+student–student and student–faculty interactions in and out of the
+classroom. Further, the classroom is a setting in which an exchange of ideas
+and creative thinking should be encouraged and where intellectual growth
+and development are fostered. Students who disrupt this classroom mission
+by rude, sarcastic, threatening, abusive or obscene language and/or
+behavior will be subject to appropriate sanctions according to university
+policy. Likewise, faculty members are expected to maintain the highest
+standards of professionalism in all interactions with all constituents of the
 university (\url{www.depts.ttu.edu/ethics/matadorchallenge/ethicalprinciples.php}).
 
 \section{Academic Integrity}
-Academic integrity is taking responsibility for one’s own class and/or course work, 
-being individually accountable, and demonstrating intellectual honesty and ethical behavior. 
-Academic integrity is a personal choice to abide by the standards of intellectual honesty 
-and responsibility. 
-Because education is a shared effort to achieve learning through the exchange of ideas, 
-students, faculty, and staff have the collective responsibility to build mutual trust and respect. 
-Ethical behavior and independent thought are essential for the highest level of academic 
-achievement, which then must be measured. 
-Academic achievement includes scholarship, teaching, and learning, all of which are shared endeavors. 
-Grades are a device used to quantify the successful accumulation of knowledge through learning. 
-Adhering to the standards of academic integrity ensures grades are earned honestly. 
-Academic integrity is the foundation upon which students, faculty, and staff build their 
-educational and professional careers. [Reference: Texas Tech University Quality 
-Enhancement Plan, Academic Integrity Task Force, 2010].
+Academic integrity is taking responsibility for one's own class and/or course work, being
+individually accountable, and demonstrating intellectual honesty and ethical behavior. Academic
+integrity is a personal choice to abide by the standards of intellectual honesty and responsibility.
+Because education is a shared effort to achieve learning through the exchange of ideas, students,
+faculty, and staff have the collective responsibility to build mutual trust and respect. Ethical
+behavior and independent thought are essential for the highest level of academic achievement,
+which then must be measured. Academic achievement includes scholarship, teaching, and learning,
+all of which are shared endeavors. Grades are a device used to quantify the successful
+accumulation of knowledge through learning. Adhering to the standards of academic integrity
+ensures grades are earned honestly. Academic integrity is the foundation upon which students,
+faculty, and staff build their educational and professional careers. [Texas Tech University
+(“University”) Quality Enhancement Plan, Academic Integrity Task Force, 2010].
 
 \section{Plagiarism Statement}
 Texas Tech University expects students to “understand the principles of academic integrity 
@@ -319,11 +316,12 @@ academic integrity and practical tips for avoiding plagiarism, explore the
 resources provided by the TTU Library and the School of Law.
 
 \section{Statement about Food Insecurity}
-Any student who faces challenges securing their food or housing and believes this may 
-affect their performance in the course is urged to contact the Dean of Students for 
-support. Furthermore, please notify the professor if you are comfortable in doing so. 
-The TTU Food Pantry is in Doak Hall 117. Please visit the website for hours of 
-operation at \url{https://www.depts.ttu.edu/dos/foodpantry.php}.
+Any student who faces challenges securing their food or housing
+and believes this may affect their performance in the course is
+urged to contact the Dean of Students for support. Furthermore,
+please notify the professor if you are comfortable in doing so. The
+TTU Food Pantry is in Doak Hall room 117. Please visit the
+website for hours of operation at \url{https://www.depts.ttu.edu/dos/foodpantry.php}.
 
 \section{Creating Livable Futures}
 This class is part of a campus-wide initiative called Creating Livable Futures, 
@@ -350,21 +348,22 @@ the course of the semester.
 
 \section*{Schedule of Topics by Week}
 Note: Book chapters in parentheses \par
-08/26/19 – Introductions, semester planning, and the Ecosystem Concept (Ch. 1) \par
-09/02/19 – \textbf{No class Tuesday}; Ecosystem Concept continued (Ch. 1) \par
-09/09/19 – Climate and Soils (Ch. 2, 3) \par
-09/16/19 – Water and Energy Balance (Ch. 4) \par
-09/23/19 – Carbon (Ch. 5, 6, 7) \par
-09/30/19 – \textbf{No classes}; \textbf{work on your review idea} \par
-10/07/19 – \textbf{Review idea proposal presentation} \par
-10/14/19 – Plant Nutrient Use and Nutrient Cycling (Ch. 8, 9) \par
-10/21/19 – Species and Trophic Dynamics (Ch. 10, 11) \par
-10/28/19 – Spatio-temporal heterogeneity (Ch. 12, 13) \par
-11/04/19 – Changes in the Earth System (Ch. 14) \par
-11/11/19 – \textbf{Review presentations} \par
-11/18/19 – \textbf{Review presentations} \par
-11/25/19 – \textbf{No classes} - Happy Thanksgiving! \par
-12/02/19 – \textbf{Final review papers due} \par
+08/21/2023 – \textbf{No class Tuesday}; Introductions, semester planning, and the Ecosystem Concept (Ch. 1) \par
+08/28/2023 – Ecosystem Concept continued (Ch. 1) \par
+09/04/2023 – \textbf{No class Thursday}; Climate and Soils (Ch. 2, 3) \par
+09/11/2023 – Water and Energy Balance (Ch. 4) \par
+09/18/2023 – Carbon inputs (Ch. 5) \par
+09/25/2023 – Ecosystem carbon budgets (Ch. 7) \par
+10/02/2023 - \textbf{No classes}; \textbf{work on literature review proposals} \par
+10/09/2023 – Plant Nutrient Use and Nutrient Cycling (Ch. 8, 9); \textbf{Literature review idea proposals due} \par
+10/16/2023 – Species and Trophic Dynamics (Ch. 10, 11) \par
+10/23/2023 – Temporal dynamics (Ch. 12) \par
+10/30/2023 - \textbf{No class Thursday}; Landscape heterogeneity and ecosystem dynamics (Ch. 13) \par
+11/06/2023 – Changes in the Earth System (Ch. 14) \par
+11/13/2023 – Managing and sustaining ecosystems (Ch. 15) \par
+11/20/2023 – \textbf{No classes} - Happy Thanksgiving! \par
+11/27/2023 – \textbf{Literature review presentations} \par
+12/05/2023 – \textbf{No class Thursday}; \textbf{Literature review presentations}; \textbf{Literature review due} \par
 
 \section*{General Weekly Schedule}
 Generally, each Tuesday will consist of a lecture by Dr. Smith followed by a discussion
