updated room and schedule

--- a/syllabus/src/BIOL5316_Syllabus_fall2023.tex
+++ b/syllabus/src/BIOL5316_Syllabus_fall2023.tex
@@ -82,7 +82,7 @@ of the course content.
 \subsection{Class Time and Location}
 Tuesdays and Thursdays 12:30-13:50
 
-Biology Building Room 102/103
+Science Building Room 204
 
 \newpage
 
@@ -404,8 +404,8 @@ Note: Book chapters in parentheses \par
 09/11/2023 – Water and Energy Balance (Ch. 4) \par
 09/18/2023 – Carbon inputs (Ch. 5) \par
 09/25/2023 – Ecosystem carbon budgets (Ch. 7) \par
-10/02/2023 - \textbf{No classes}; \textbf{work on literature review proposals} \par
-10/09/2023 – Plant Nutrient Use and Nutrient Cycling (Ch. 8, 9); \textbf{Literature review idea proposals due} \par
+10/02/2023 - Plant Nutrient Use (Ch. 8) \par
+10/09/2023 – Nutrient Cycling (Ch. 9); \textbf{Literature review idea proposals due} \par
 10/16/2023 – Species and Trophic Dynamics (Ch. 10, 11) \par
 10/23/2023 – Temporal dynamics (Ch. 12) \par
 10/30/2023 - \textbf{No class Thursday}; Landscape heterogeneity and ecosystem dynamics (Ch. 13) \par
