changed numbers on syllabus

--- a/syllabus/src/BIOL4316_Syllabus_fall2023.tex
+++ b/syllabus/src/BIOL4316_Syllabus_fall2023.tex
@@ -19,7 +19,7 @@
 
 \title{
 	\textbf{
-		BIOL 4316
+		BIOL 4301-029
 	} \\
 	\large Principles of Terrestrial Ecosystem Ecology \\
 	\large Fall 2023
