--- a/syllabus/src/BIOL5316_Syllabus_fall2023.tex
+++ b/syllabus/src/BIOL5316_Syllabus_fall2023.tex
@@ -19,7 +19,7 @@
 
 \title{
 	\textbf{
-		BIOL 5316
+		BIOL 6301-029
 	} \\
 	\large Principles of Terrestrial Ecosystem Ecology \\
 	\large Fall 2023
