--- a/syllabus/src/BIOL4316_Syllabus_fall2023.tex
+++ b/syllabus/src/BIOL4316_Syllabus_fall2023.tex
@@ -69,7 +69,7 @@ nick.smith@ttu.edu \par
 Principles of Terrestrial Ecosystem Ecology (2nd Edition; 2011) 
 by Chapin, Matson, and Vitousek \par
 The book can be accessed from Springer here: 
-\url{https://www.springer.com/us/book/9780387783406}. Click on "Access this title on 
+\url{https://link.springer.com/book/10.1007/978-1-4419-9504-9}. Click on "Access this title on 
 SpringerLink." It can also be accessed through the TTU library.
 
 \section{Course Materials}
