--- a/miniquizzes/src/miniquiz1_08.31.2023.tex
+++ b/miniquizzes/src/miniquiz1_08.31.2023.tex
@@ -25,7 +25,7 @@
 	\textbf{
 		Mini-Quiz 1
 	} \\
-	\large BIOL 4316/5316 \\
+	\large BIOL 4301/6301 \\
 	\large August 31, 2023 \\
 }
 
@@ -41,14 +41,31 @@
 
 {\let\newpage\relax\maketitle}
 
-\section{\small{Create a systems diagram to explain how an increase in fire activity
-will influence ecosystem services in the Amazon. Denote any amplifying or
-stabilizing feedbacks in your diagram.}}
+
+
+\section{\small{What is ecosystem ecology and what makes it an important field of ecology?}}
+
+\wl
+\wl
+\wl
+\wl
+\wl
+\wl
+\wl
+
+\section{\small{In his description of the state factors controlling ecosystems and their processes,
+Jenny did not include humans. How should this framework be modified based on what you've read from the Chapin book
+and Vitousek paper?}}
 
 \newpage
 
-\section{\small{Given your diagram, what will be the net effect on the different ecosystem
-services you identified? What sort of management practices would you prescribe?}}
+\includegraphics[scale = 0.5]{idalia_tweet}
+
+\section{\small{The tweet (X?) above indicates that Hurricane Idalia
+will impact a region in Florida (Apalachee Bay) that has never experienced a major hurricane.
+Create a systems diagram to explain how Hurricane Idalia
+will influence ecosystem services in the Apalachee Bay. Denote any amplifying or
+stabilizing feedbacks in your diagram.}}
 
 } %end font selection
 
