--- a/miniquizzes/src/miniquiz4_09.28.2023.tex
+++ b/miniquizzes/src/miniquiz4_09.28.2023.tex
@@ -48,7 +48,7 @@ why you expect the trend you illustrated.}}
 \newpage
 
 \section{\small{How do you think eutrophication (the addition of nutrients to soils) will influence
-soil organic carbon? Provide your answer in the form of a hypothesis with both the expected
+carbon stored in soils? Provide your answer in the form of a hypothesis with both the expected
 response and biological reasoning.}}
 
 \wl
@@ -60,7 +60,7 @@ response and biological reasoning.}}
 \wl
 
 \section{\small{How do you think elevated atmospheric CO2 will influence
-soil organic carbon? Provide your answer in the form of a hypothesis with both the expected
+carbon stored in soils? Provide your answer in the form of a hypothesis with both the expected
 response and biological reasoning.}}
 
 \wl
@@ -72,7 +72,7 @@ response and biological reasoning.}}
 \wl
 
 \section{\small{How do you think increasing temperature will influence
-soil organic carbon? Provide your answer in the form of a hypothesis with both the expected
+carbon stored in soils? Provide your answer in the form of a hypothesis with both the expected
 response and biological reasoning.}}
 
 \newpage
