--- a/miniquizzes/src/miniquiz5_10.12.2023.tex
+++ b/miniquizzes/src/miniquiz5_10.12.2023.tex
@@ -41,6 +41,19 @@
 
 {\let\newpage\relax\maketitle}
 
+\section{\small{Please describe the most exciting thing you learned from Dr. Schwilk about fire
+last week.}}
+
+\wl
+\wl
+\wl
+\wl
+\wl
+\wl
+\wl
+\wl
+\wl
+
 \section{\small{What is the main difference between the phosphorus (P) and nitrogen (N)
 cycles that contributes to greater limitation to P than N in tropical ecosystems relative
 to temperate ecosystems?}}
